# mcp-playground

./: README.md  agent_kimi.json  cursor_app.py  first_client.py  gradio_server_app.py  letter_counter_local_gradio_tool.json  letter_counter_my_public_tool copy.json  letter_counter_my_public_tool_ollama_model.json  mcpclient_smolagents_hf_inferenceprovider.py  mcpclient_smolagents_ollama_model_sentiment_mcp_client.py  mcpclient_smolagents_ollama_model_wordoperations_mcp_client copy.py  pyproject.toml  sentiment_agent_using_remote.json  server.py  simple_client.py  smolagent_client.py  tinyagent_localmodel.json
.continue/mcpServers/: sentiment-analysis.yaml
.continue/models/: local-models.yaml
