[project]
name = "mcp-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.13.1",
    "huggingface_hub[mcp]>=0.32.0",
    "gradio[mcp]",
    "smolagents[mcp]",
    "smolagents[litellm]",
    "fastmcp",
    "mcp",
]
